# OmegaCF-client

./: .gitignore  CMakeLists.txt  Makefile  README.markdown  appveyor.yml
docs/: functionality-documentation.md  heuristic-documentation.md  network-documentation.md
include/: GameHandler.hpp
include/factory/: BestMoveCalculatorFactory.hpp  GameFactory.hpp
include/game/: BestMoveCalculator.hpp  Field.hpp  Game.hpp  Grid.hpp  IBestMoveCalculator.hpp  MCTSMoveCalculator.hpp  MCTSNode.h  Player.hpp  PossibleMove.hpp  QLearningMoveCalculator.hpp  RandomMoveCalculator.hpp
include/ml/: INetwork.hpp  agent.hpp  network.hpp  networkA.hpp  networkAgent.hpp  qLearningAgent.hpp  replayMemory.hpp  trainer.hpp
include/network/: DataHandlingService.hpp  NetworkClient.hpp  NetworkMessage.hpp  NetworkMessageType.hpp
include/player/: PlayerSimulateBot.h
include/util/: Debug.hpp  Helper.hpp  NetworkMessageConverter.hpp  enums.hpp  utils.hpp
src/: GameHandler.cpp  main.cpp
src/factory/: GameFactory.cpp
src/game/: BestMoveCalculator.cpp  Game.cpp  Grid.cpp  MCTSMoveCalculator.cpp  MCTSNode.cpp  QLearningMoveCalculator.cpp  RandomMoveCalculator.cpp
src/ml/: agent.cpp  network.cpp  networkAgent.cpp  qLearningAgent.cpp  trainer.cpp
src/network/: DataHandlingService.cpp  NetworkClient.cpp  NetworkMessage.cpp
src/player/: PlayerSimulateBot.cpp
src/util/: Debug.cpp  Helper.cpp  NetworkMessageConverter.cpp
test/heuristic/: main.cpp
test/heuristic/grids/: 02.txt  03.txt
